--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="green_secondary">#0F5912</color>
-    <color name="green_primary">#38754F</color>
+    <color name="green_secondary">#2D8F70</color>
+    <color name="green_primary">#33A480</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
+    <color name="dark_grey">#707070</color>
     <color name="white">#FFFFFFFF</color>
 </resources>
