History dan Point History

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="black">#FF000000</color>
     <color name="dark_grey">#707070</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="grey">#ACA8A8</color>
 </resources>
