--- a/app/src/main/res/layout/item_point_history.xml
+++ b/app/src/main/res/layout/item_point_history.xml
@@ -17,7 +17,9 @@
             android:id="@+id/title_trash"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="4dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
             android:text="@string/title_list_sampah"
             android:textSize="16sp"
             android:textStyle="bold"
@@ -29,11 +31,13 @@
             android:id="@+id/imageView6"
             android:layout_width="24dp"
             android:layout_height="24dp"
+            android:layout_marginStart="8dp"
             android:layout_marginTop="16dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/title_trash"
             app:srcCompat="@drawable/point_logo"
-            tools:ignore="MissingConstraints" />
+            tools:ignore="MissingConstraints"
+            android:contentDescription="@string/photo" />
 
         <TextView
             android:id="@+id/count_reward_point"
@@ -42,7 +46,7 @@
             android:layout_marginStart="8dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="8dp"
-            android:text="@string/point_reward_count"
+            android:text="@string/point_minus_count"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toEndOf="@+id/imageView6"
@@ -52,7 +56,9 @@
             android:id="@+id/date"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
             android:layout_marginTop="24dp"
+            android:layout_marginEnd="8dp"
             android:text="@string/date"
             android:textColor="@color/grey"
             app:layout_constraintEnd_toEndOf="parent"
