--- a/app/src/main/res/layout/item_list_trash.xml
+++ b/app/src/main/res/layout/item_list_trash.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/card_view"
     android:layout_width="match_parent"
     android:layout_height="120dp"
@@ -17,10 +16,13 @@
             android:id="@+id/photo"
             android:layout_width="100dp"
             android:layout_height="120dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/bottle_trash" />
+            app:srcCompat="@drawable/bottle_trash"
+            android:contentDescription="@string/photo" />
 
         <TextView
             android:id="@+id/title_trash"
@@ -58,7 +60,8 @@
             android:layout_marginTop="16dp"
             app:layout_constraintStart_toEndOf="@+id/photo"
             app:layout_constraintTop_toBottomOf="@+id/desc_trash"
-            app:srcCompat="@drawable/point_logo" />
+            app:srcCompat="@drawable/point_logo"
+            android:contentDescription="@string/photo" />
 
         <TextView
             android:id="@+id/count_reward_point"
