--- a/app/src/main/res/layout/activity_on_boarding_one.xml
+++ b/app/src/main/res/layout/activity_on_boarding_one.xml
@@ -44,7 +44,8 @@
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/onboardingone" />
+        app:srcCompat="@drawable/onboardingone"
+        android:contentDescription="@null" />
 
     <TextView
         android:id="@+id/textView"
