--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -44,7 +44,8 @@
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/goloak_logo_autentikasi" />
+        app:srcCompat="@drawable/goloak_logo_autentikasi"
+        android:contentDescription="@null" />
 
     <TextView
         android:id="@+id/textView"
