--- a/app/src/main/res/layout/activity_on_boarding_two.xml
+++ b/app/src/main/res/layout/activity_on_boarding_two.xml
@@ -29,7 +29,8 @@
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/onboardingtwo" />
+        app:srcCompat="@drawable/onboardingtwo"
+        android:contentDescription="@null" />
 
     <TextView
         android:id="@+id/textView"
