--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -15,5 +15,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/goloak_logo" />
+        app:srcCompat="@drawable/goloak_logo"
+        android:contentDescription="@null" />
 </androidx.constraintlayout.widget.ConstraintLayout>
