--- a/app/src/main/res/layout/item_history.xml
+++ b/app/src/main/res/layout/item_history.xml
@@ -4,7 +4,6 @@
     android:id="@+id/card_view_history"
     android:layout_width="match_parent"
     android:layout_height="120dp"
-    android:layout_marginTop="8dp"
     android:layout_marginBottom="8dp"
     android:backgroundTint="@color/cardview_shadow_end_color">
 
@@ -15,12 +14,15 @@
         <ImageView
             android:id="@+id/photo"
             android:layout_width="100dp"
-            android:layout_height="120dp"
+            android:layout_height="match_parent"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
+            android:contentDescription="@string/photo"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/bottle_trash"
-            android:contentDescription="@string/photo" />
+            app:srcCompat="@drawable/bottle_trash" />
 
         <TextView
             android:id="@+id/title_history"
