--- a/app/src/main/res/layout/item_list_trash.xml
+++ b/app/src/main/res/layout/item_list_trash.xml
@@ -3,8 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/card_view"
     android:layout_width="match_parent"
-    android:layout_height="120dp"
-    android:layout_marginTop="8dp"
+    android:layout_height="wrap_content"
     android:layout_marginBottom="8dp"
     android:backgroundTint="@color/cardview_shadow_end_color">
 
@@ -16,13 +15,14 @@
             android:id="@+id/photo"
             android:layout_width="100dp"
             android:layout_height="120dp"
+            android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
+            android:contentDescription="@string/photo"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/bottle_trash"
-            android:contentDescription="@string/photo" />
+            app:srcCompat="@drawable/bottle_trash" />
 
         <TextView
             android:id="@+id/title_trash"
@@ -58,21 +58,23 @@
             android:layout_height="24dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="16dp"
+            android:layout_marginBottom="16dp"
+            android:contentDescription="@string/photo"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@+id/photo"
             app:layout_constraintTop_toBottomOf="@+id/desc_trash"
-            app:srcCompat="@drawable/point_logo"
-            android:contentDescription="@string/photo" />
+            app:layout_constraintVertical_bias="0.0"
+            app:srcCompat="@drawable/point_logo" />
 
         <TextView
             android:id="@+id/count_reward_point"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="4dp"
-            android:layout_marginTop="18dp"
+            android:layout_marginTop="16dp"
             android:layout_marginEnd="8dp"
             android:text="@string/point_reward_count"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.041"
             app:layout_constraintStart_toEndOf="@+id/imageView6"
             app:layout_constraintTop_toBottomOf="@+id/desc_trash" />
     </androidx.constraintlayout.widget.ConstraintLayout>
